[tool.poetry]
name = "dsa"
version = "0.1.0"
description = ""
authors = ["JB-Tellez <jb.tellez@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PySnooper = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
poetry = "^1.1.6"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
